Fixed issue #22
Added max-width, overflow-y and word-wrap css to ensure no text overflow. If the text is too long to fit in the box, it will be hidden and a horizontal scrollbar will appear

--- a/index.css
+++ b/index.css
@@ -182,6 +182,9 @@ textarea {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 100%;
+    overflow-y: auto;
+    word-wrap: normal;
 }
 
 .preview-section.active {
